--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="zh-Hans">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <title>订单系统</title>
+  <title>订单中心</title>
   <style>
-    body {
-      margin: 0;
-      padding: 0;
-    }
     html {
       margin: 0;
       padding: 0;
     }
   </style>
 </head>
-
 <body style="margin: 0;padding: 0;">
   <div id="app"></div>
-  <!-- built files will be auto injected -->
 </body>
-
 </html>
